force-app/main/default/objects/Resilient_Communication_Device__c/Resilient_Communication_Device__c.object-meta.xml
<CustomObject>
    <label>ESCC Communication Device</label>
    <nameField>
        <label>Resilient Communication Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESCC Communication Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>