force-app/main/default/objects/Resilient_Communication_Device__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ESCC Communication Devices</relationshipLabel>
    <relationshipName>ESCC_Communication_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>