force-app/main/default/objects/Resilient_Communication_Device__c/fields/Device_Number__c.field-meta.xml
<CustomField>
    <fullName>Device_Number__c</fullName>
    <label>Device Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>