force-app/main/default/objects/Resilient_Communication_Device__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ESCC Communication Devices</relationshipLabel>
    <relationshipName>ESCC_Communication_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>